# RoboSwift

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  stitch_ui.html
.Jules/: palette.md
.jules/: bolt.md  palette.md  sentinel.md
src/: App.tsx  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: Tooltip.tsx
