[package]
name = "robo-swift"
version = "0.1.0"
description = "RoboSwift is a high-performance GUI for the legendary Windows robocopy engine."
authors = ["Sasidhar Akurathi"]
license = "MIT"
repository = "https://github.com/sasidharakurathi/RoboSwift"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
regex = "1.12.3"
